feat: fix rest service ITs